# debian-packaging

./: LICENSE  Makefile  Makefile.inc  README.md  TODO  create-manpage  download-source  include.mk  list-all-packages.sh  release_notes.txt  tsmuxer.1  tsmuxergui.desktop  vercmp.inc
animechecker/: Makefile
asylum-teaser/: COPYING  Makefile  README.md  build.sh  clean.sh
dagon/: Makefile  README.md  build.sh  clean.sh
dagon-git/: Makefile  changelog.sh
debian/: build-libcurl.sh  changelog  control  copyright  curl-ssl-searchpaths.patch  links  postinst  prerm  rules  tsmuxer.links  tsmuxer.manpages  tsmuxer.postinst  tsmuxer.prerm  tsmuxergui.install  tsmuxergui.links  tsmuxergui.postinst  tsmuxergui.prerm
divx265/: Makefile  README.md  build.sh  clean.sh
doom3-demo/: Makefile  README.md  build.sh  clean.sh
ffmpeg-git/: Makefile  dependencies.sh
ffmpeg-static/: Makefile
fmod/: COPYING  Makefile  README.md  build.sh  clean.sh  download.sh
fmodex/: Makefile  README.md  build.sh  download.sh
fmodex-private/: COPYING  Makefile  README.md  build.sh  clean.sh  download.sh
freedoom/: Makefile  README.md  build.sh  clean.sh
freedoom-git/: Makefile  README.md  build.sh  changelog.sh
google-earth/: COPYING  Makefile  README.md  build.sh  clean.sh
utils/patchelfmod-git/patchelfmod-src/: AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  patchelfmod.spec.in  release.nix
utils/patchelfmod-git/patchelfmod-src/man/: patchelfmod.1.in
utils/patchelfmod-git/patchelfmod-src/src/: Makefile.am
utils/patchelfmod-git/patchelfmod-src/tests/: backup.sh
(+2369 files in other folders)
